# SparkleShare

./: Makefile.in  aclocal.m4  configure  sparkleshare_0.2.1.orig.tar.gz.delta  sparkleshare_0.2.1.orig.tar.gz.id  sparkleshare_0.2.2.orig.tar.gz.delta  sparkleshare_0.2.2.orig.tar.gz.id  sparkleshare_0.2.4.orig.tar.gz.delta  sparkleshare_0.2.4.orig.tar.gz.id  sparkleshare_0.2.5.orig.tar.gz.delta  sparkleshare_0.2.5.orig.tar.gz.id  sparkleshare_0.4.0.orig.tar.gz.delta  sparkleshare_0.4.0.orig.tar.gz.id  sparkleshare_0.4.1.orig.tar.gz.delta  sparkleshare_0.4.1.orig.tar.gz.id  sparkleshare_0.4.2.orig.tar.gz.delta  sparkleshare_0.4.2.orig.tar.gz.id  sparkleshare_0.6.0.orig.tar.gz.delta  sparkleshare_0.6.0.orig.tar.gz.id  sparkleshare_0.8.2.orig.tar.gz.delta  sparkleshare_0.8.2.orig.tar.gz.id  sparkleshare_0.8.4.orig.tar.gz.delta  sparkleshare_0.8.4.orig.tar.gz.id  sparkleshare_0.9.0.orig.tar.gz.delta  sparkleshare_0.9.0.orig.tar.gz.id
SparkleShare/: Makefile.am  Makefile.in  SparkleController.cs  SparkleInvite.cs  SparkleSetupController.cs
SparkleShare/Common/: Makefile.in
SparkleShare/Common/HTML/: Makefile.in
SparkleShare/Common/Pixmaps/: Makefile.in
SparkleShare/Common/Plugins/: Makefile.am  Makefile.in  slcfk.xml  slcfk.xml.in
SparkleShare/Linux/: Makefile.in  SparkleSetup.cs
SparkleShare/Linux/Pixmaps/: Makefile.in
SparkleShare/Mac/: Makefile.am  Makefile.in  SparkleEventLog.cs  SparkleShare.csproj  SparkleStatusIcon.cs
SparkleShare/Nautilus/: Makefile.in  sparkleshare-nautilus-extension.py  sparkleshare-nautilus3-extension.py
SparkleShare/Windows/: TODO
(+47 files in other folders)
